--- a/system/application/views/admin/static/css/toolbar.css
+++ b/system/application/views/admin/static/css/toolbar.css
@@ -296,7 +296,10 @@ li.plupload_droptext {
 	opacity:.6;
 	filter:alpha(opacity=60);
 }
-#ContentSave {
+
+ 
+
+.mw_bottom_nav {
 	display: inline-block;
 	padding:12px 22px;
 	position: fixed;
@@ -310,8 +313,14 @@ li.plupload_droptext {
 	border-radius:6px;
 	z-index: 1000;
 }
-#ContentSave:hover {
-	background:#142D3F
+
+
+.mw_bottom_btn{
+	color:#FFF;
+}
+.mw_bottom_btn:hover {
+	 
+	color: #CCC;
 }
 .module_edit_bar {
 	position: absolute;
@@ -323,16 +332,17 @@ li.plupload_droptext {
 	display: none;
 }
 .module {
-	position: relative;
+	/*position: relative;
 	zoom:1;
+	zoom:1;*/
 }
 .module:after {
-	content: ".";
+	/*content: ".";
 	display: block;
 	clear: both;
 	visibility: hidden;
 	line-height: 0;
-	height: 0;
+	height: 0;*/
 }
 .module_edit_bar_handle {
 	display: inline-block;
@@ -613,8 +623,11 @@ li.plupload_droptext {
 }
 #module_temp_holder {
 	font-size:9px;
-	background-color:#CCC;
-	opacity:0.2;
-	filter:alpha(opacity=20);
+	background-color:#09F;
+	opacity:0.8;
+	filter:alpha(opacity=80);
 	cursor:move;
+	height:30px;
+	width:30px;
+	display:block;
 }
