--- a/userfiles/templates/worldtrade/css/site.css
+++ b/userfiles/templates/worldtrade/css/site.css
@@ -10,48 +10,7 @@
 body {
 	background:#FFF url(../images/site-bg.jpg) repeat-x 0 0;
 }
-
-h1 {
-  font-size: 25px;
-}
-
-h2 {
-  font-size: 23px;
-}
-
-h3 {
-  font-size: 21px;
-}
-
-h4 {
-  font-size: 19px;
-}
-
-h5 {
-  font-size: 17px;
-}
-
-h6 {
-  font-size: 15px;
-}
-
-/* `Spacing
-----------------------------------------------------------------------------------------------------*/
-
-richtext.ol {
-  list-style: decimal;
-}
-ul {
-  list-style: none;
-}
-richtext.ul {
-  list-style: disc;
-}
-
-richtext.li {
-  margin-left: 30px;
-}
-richtext.li {
+li {
 	list-style:none;
 }
 img {
@@ -870,4 +829,3 @@ text-decoration:underline;
 	margin: 2px;
 	padding: 2px;
 }
-
