--- a/userfiles/resources/1140grid/css/1140.css
+++ b/userfiles/resources/1140grid/css/1140.css
@@ -17,10 +17,11 @@ clear:both;
 
 .row {
 width: 100%;
-max-width: 1140px;
+/*max-width: 1140px;
 min-width: 455px;
 margin: 0 auto;
-padding: 5px;
+padding: 5px;*/
+clear:both;
  
 /*overflow: hidden;*/
 }
@@ -28,8 +29,16 @@ padding: 5px;
 	float: left;
 min-height: 1px;
 min-width: 10px;
-padding:5px;
+padding:0px;
 }
+
+
+.col:hover {
+	 outline: 1px dotted #117829;
+outline-offset: 10px; /*Delete if you don't want an offset*/
+}
+
+
 .onecol, .twocol, .threecol, .fourcol, .fivecol, .sixcol, .sevencol, .eightcol, .ninecol, .tencol, .elevencol {
 margin-right: 3.8%;
 float: left;
