--- a/application/views/admin/static/freshereditor/toolbar.css
+++ b/application/views/admin/static/freshereditor/toolbar.css
@@ -253,6 +253,20 @@ position:relative;*/
 	right:20px;
 	z-index: 100000;
 }
+
+#mw-layout-edit-site-previe-button {
+	background-color: #000000;
+	 right: 0px;
+	top: 0px;
+	font-family: verdana, arial;
+	font-size: 11px;
+	height: 30px;
+	position: fixed;
+	width: 30px;
+	z-index: 1001;
+}
+
+
 #mw-layout-edit-site-top-bar {
 	background-color: #CCCCCC;
 	border-top: 1px solid #CCCCCC;
@@ -349,6 +363,9 @@ position:relative;*/
 }
 /* Vertical Tabs
 ----------------------------------*/
+
+
+
 #mw_css_editor .ui-tabs-vertical {
 	width: 55em;
 }
