--- a/application/views/admin/static/freshereditor/toolbar.css
+++ b/application/views/admin/static/freshereditor/toolbar.css
@@ -4,10 +4,10 @@ body {
 	margin-bottom:30px;
 }
 .sortable-placeholder, .ui-sortable-placeholder, .ui-state-highlight, .sortable-dragging {
-	/* padding-top:15px;
+	  padding-top:15px;
 		    padding-bottom:15px;
 		 margin-top:10px;
-		 margin-bottom:10px;*/
+		 margin-bottom:10px; 
 		  
  
 	background-image: url(images/drop.png);
