--- a/application/views/admin/static/freshereditor/toolbar.css
+++ b/application/views/admin/static/freshereditor/toolbar.css
@@ -118,8 +118,8 @@ body {
 }
 .mw-outline {
 	outline-style:solid;
-	outline-width:2px;
-	outline-color: #000;
+	outline-width:1px;
+	outline-color: #0F0;
 	outline-offset: 2px;
 }
 /*.edit .ui-state-highlight {
