--- a/application/includes/css/toolbar_2.css
+++ b/application/includes/css/toolbar_2.css
@@ -1,5 +1,8 @@
-
-
+@import url("bootstrap/css/mw_module_settings.css");
+body {
+	margin-top:165px;
+	margin-bottom:30px;
+}
 .sortable-placeholder, .ui-sortable-placeholder, .ui-state-highlight, .sortable-dragging {
 	padding-top:5px;
 	padding-bottom:5px;
@@ -119,7 +122,28 @@
 	outline-color: #0F0;
 	outline-offset: 2px;
 }
+/*.edit .ui-state-highlight {
+ z-index:99	!important;
+}
  
+.column-outline {
+	outline: 1px dotted #0CF;
+ 	
+}
+.column .ui-state-highlight, .column .empty {
+ z-index:300	!important;
+}
+
+.column .column,.column .column .empty {
+ z-index:993	!important;
+}
+
+.row>.column>.row>.column>.ui-state-highlight, .column .empty, .row .column .row .column .ui-state-highlight, .row .empty {
+ z-index:9990	!important;
+}
+
+
+*/
 .ui-sortable:not(.edit):hover, .col:hover {
 /*outline: 1px dotted #0CF;*/
 }
@@ -140,7 +164,13 @@ a.mw-make-cols.active {
 	color:#FFF;
 }
 .column {
-	float:left;
+	float:left;/*	outline-style:solid;
+outline-width:1px;
+outline-color: #039;
+outline-offset: 1px;
+position:relative;*/
+ 
+	 
 }
 .column-min-height {
 	min-height:100px;
@@ -198,6 +228,9 @@ opacity: 1;
  	
 	top:0px;
 	z-index:1000;
+	/*background-image: url(images/col-handle.png);
+	background-repeat: repeat-x;
+	background-position:center center;*/
 	display:none;
 	cursor:move;
 }
@@ -209,7 +242,13 @@ opacity: 1;
 }
 .mw-sorthandle-row {
  	top:-14px;
+	  
+
+	 
 	z-index:900;
+	/*background-image: url(images/row-handle.png);
+	background-repeat: repeat-x;
+	background-position:center center;*/
 	display:none;
 	cursor:move;
 }
@@ -222,19 +261,116 @@ opacity: 1;
 .ui-resizable-helper {
 	border: 2px dotted #00F;
 }
+ [contenteditable=true], .outline, .mw_dragover, .ui-resizable:hover {
+}
+[contenteditable=true]:hover {
+}
+.edit .module, .edit img {
+/*resize: both;  */
+}
+#mw-layout-edit-footer-bar {
+	background-color: #F0F0F0;
+	border-top: 1px solid #CCCCCC;
+	bottom: 0px;
+	font-family: verdana, arial;
+	font-size: 11px;
+	height: 15px;
+	position: fixed;
+	width: 100%;
+	z-index: 1000;
+}
+#ContentSave {
+	position:fixed;
+	bottom:40px;
+	right:20px;
+	z-index: 100000;
+}
 
-        
+#mw-layout-edit-site-previe-button {
+	background-color: #000000;
+	 right: 0px;
+	top: 0px;
+	font-family: verdana, arial;
+	font-size: 11px;
+	height: 30px;
+	position: fixed;
+	width: 30px;
+	z-index: 1001;
+}
+
+
+#mw-layout-edit-site-top-bar {
+	background-color: #CCCCCC;
+	border-top: 1px solid #CCCCCC;
+	top: 0px;
+	font-family: verdana, arial;
+	font-size: 11px;
+	height: 155px;
+	position: fixed;
+	width: 100%;
+	z-index: 1000;
+}
+#mw-layout-edit-site-text-editor {
+	top: 1px;
+	height: 30px;
+	position: relative;
+	width: 100%;
+	z-index: 1000;
+}
+#mw-layout-edit-toolbar-top-container {
+	top: 0px;
+	height: 130px;
+	position: relative;
+	width: 100%;
+	z-index: 1000;
+	background-image: url(images/mw_toolbar_top.jpg);
+	background-repeat: repeat-x;
+}
+#mw-layout-edit-toolbar-top-container .ui-tabs-panel {
+	height: 63px !important;
+}
+#mw-layout-edit-toolbar-top-container-items {
+	top: 0px;
+	height: 75px;
+	position: relative;
+	width: 100%;
+	z-index: 1000;
+	background-color:#e9e9e9;
+}
+#mw-layout-edit-site-top-bar-l, .mw-layout-edit-site-bar-l {
+	width: 100%;
+	float:left;
+}
+.mw-layout-edit-curent-row-element {
+	color:#6C6C00;
+}
+.mw-layout-edit-curent-element {
+	color:#005E00;
+}
+/* To make up for scroll-bar. */
+		#mw-layout-edit-site-top-bar {
+	_top: -1px;
+	_position: absolute;
+	_right: 16px;
+}
+.modules-list-holder {
+	width:100%;
+	overflow: scroll;
+	height:75px;
+}
 .modules-list {
 	list-style-position: inside;
 	list-style-image: none;
 	list-style-type: none;
-	width:90%;
-	overflow:hidden;
-	height: 75px;
+	width:100%;
+	overflow:scroll;
+	height: 50px;
+	 
 }
 .modules-list img {
 	border: 0 none;
 	height: 32px;
+	;
 	vertical-align: middle;
 }
 .modules-list li {
