--- a/application/includes/css/mw_framework.css
+++ b/application/includes/css/mw_framework.css
@@ -137,12 +137,14 @@ body:-webkit-full-screen {
 
 .mw_modal{
   position: fixed;
-  z-index: 99;
+  z-index: 10001;
+  top:50%;
+  left: 50%;
   display: none;
   background: white;
-  box-shadow:2px 2px 3px #000;
+  box-shadow:0 0 5px #555555;
   -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
+  -moz-border-radius: 5px  ;
   border-radius: 5px;
 }
 .mw_modal_container{
