--- a/application/includes/css/toolbar.css
+++ b/application/includes/css/toolbar.css
@@ -371,6 +371,18 @@ padding:0px !important;
   margin: 14px 20px;
 }
 
+.mw_modal_close{
+  position: absolute;
+  display: block;
+  width: 12px;
+  height: 12px;
+  background: red;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  text-indent: -9999px;
+}
+
 
 
 
